# ip-demo-project

./: .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  CLAUDE.md  CLIENT_ENV_SETUP.md  CLIENT_SETUP_RUNBOOK.md  COPILOT_CONTEXT.md  DATABASES.md  GRAPH_ML_AND_GDS.md  MIGRATION_REPORT_BATCH1.md  MIGRATION_REPORT_BATCH2.md  PROGRESS.md  README.md  SMARTSDK_REFERENCE.md  START_HERE.md  STATUS_CHECK.md  TIGERGRAPH_AUDIT.md  TIGERGRAPH_PREFLIGHT.md  TROUBLESHOOTING.md  UI_INTELLIGENCE_WORK.md  VERIFICATION_CHECKPOINT.md  pyproject.toml  uv.toml  uv.toml.example
app/agents/: ai_assistant_runtime.py
app/agp/: mentorship.py  service.py
app/api/: main.py
app/audit/: package_auditor.py  requirement_catalog.py
app/client360/: service.py
app/coaching/: service.py
app/config/: settings.py
app/crm/: service.py
app/embeddings/: embedding_engine.py  embedding_repository.py  graph_builder.py  service.py  similar_entities.py  similarity_engine.py  tigergraph_embedding_linker.py
app/export/: dashboard_export.py
app/feature_store/: csv_loader.py  feature_engineering.py  feature_registry.py  feature_store_repository.py  sqlite_manager.py
app/features/: __init__.py  engineering.py  feature_engineering.py  feature_runtime.py  models.py  prediction_runtime.py  similarity.py  snapshot_store.py  sqlite_feature_store.py
app/feedback/: feedback_repository.py  learning_signal_engine.py  reward_engine.py  service.py  tigergraph_feedback_linker.py
app/graph/: __init__.py  artifacts.py  client.py  foundation_store.py  graph_runtime.py  neighborhood.py  tiered_client.py  tigergraph_mcp_stdio_client.py  tigergraph_production_runtime.py  tigergraph_rest_adapter.py
app/ingestion/: checkpoint_repository.py  entity_registry.py  ingestion_service.py  tigergraph_upsert.py
app/knowledge/: __init__.py  chroma_adapter.py  chroma_client.py  chunker.py  chunking.py  document_parser.py  embedding_provider.py  embedding_service.py  knowledge_catalog_repository.py  knowledge_runtime.py  mock_vector_store.py  models.py  rag_service.py  tigergraph_document_linker.py  vector_store.py
app/llm/: client.py  embedding_client.py
app/mcp/: tool_registry.py
app/memory/: __init__.py  context_engineering.py  memory_runtime.py  memory_store.py  models.py
app/ml/: anomaly.py  client.py  fl_finetune.py  fl_pairs.py  fl_service.py  gnn.py  graph_algorithms.py  next_best_product.py  real_forecast.py  real_scoring.py  registry.py  vector_client.py
app/models/: ai_chat.py  business.py  context.py  embeddings.py  features.py  feedback_learning.py  ingestion.py  insights_coaching.py  knowledge.py  memory.py  opportunities.py  predictions.py  recommendations.py  tigergraph_schema.py
app/opportunities/: opportunity_engine.py  opportunity_repository.py  service.py  tigergraph_opportunity_linker.py
docs/: CONFIGURATION_CLEANUP.md  FINAL_RELEASE_README.md  LAST_MILE_INTEGRATION_AUDIT.md  PART17_5_ENTERPRISE_UI_TIGERGRAPH_CONSOLIDATED.md  PART17_EMERGENCY_UI_REMEDIATION.md  README_OPERATIONS_INDEX.md  TIGERGRAPH_MCP_CORRECTED_SOURCE_OF_TRUTH.md  TIGERGRAPH_RESTPP_CORRECTED_AUDIT.md  TIGERGRAPH_SOURCE_OF_TRUTH.md  final_coverage_audit.json  final_part17_5_audit.json  final_release_check_report.json  final_release_status.json  final_requirements_coverage_matrix.md  part17_5_consolidated_validation.json  part_11_0_1_summary.md  part_11_0_1_validation_report.json  part_11_0_2_summary.md  part_11_0_2_validation_report.json  part_11_0_3_summary.md  part_11_0_3_validation_report.json  part_11_10_recommendation_engine.md  part_11_10_validation_report.json  part_11_11_feedback_learning.md  part_11_11_validation_report.json  part_11_12_ai_insights_coaching.md  part_11_12_validation_report.json  part_11_13_ai_assistant_chat.md  part_11_13_validation_report.json  part_11_14_streamlit_enterprise_ui.md  part_11_14_validation_report.json  part_11_15_final_orchestration_demo_run.md  part_11_15_validation_report.json  part_11_16_validation_report.json  part_11_1_tigergraph_foundation.md  part_11_1_validation_report.json  part_11_2_enterprise_demo_data.md  part_11_2_validation_report.json  part_11_3_data_ingestion_sync.md  part_11_3_validation_report.json  (+80 more)
frontend/: .env.local.example  PROGRESS.md  package-lock.json  package.json  playwright.config.ts
models/: registry.json
prompt/: COPILOT_PROMPT.txt  High_Level_Executive_Architecture_Detailed.pptx  High_Level_Executive_Architecture_Simplified.pptx  iPerform_Architecture_OnePager.pptx  iPerform_Architecture_Poster.pptx  iPerform_Insights_Coaching_Overview.docx
runbooks/: agentic_ai_runbook.md  deep_hardening_runbook.md  demo_story_script.md  final_react_ui_runbook.md  final_runtime_validation_runbook.md  final_ui_runtime_validation_runbook.md  local_demo_runbook.md  quick_start.md  react_ui_quick_start.md  tigergraph_mcp_first_access.md  tigergraph_mcp_library_integration.md  tigergraph_setup_guide.md
scripts/: build_embeddings_similarity.py  capture_browser_screenshots.py  check_client_deps.py  check_installation_readiness.py  check_tg_vector_support.sh  check_tigergraph_mcp_tools.py  client_demo_go_no_go.py  client_ready_validation.py  demo_graph_access_modes.py  final_api_health_check.py  final_no_partial_coverage_validation.py  final_release_check.py  final_runtime_validation.ps1  final_runtime_validation.sh  final_smoke_test.py  generate_enterprise_demo_data.py  generate_rag_corpus_docs.py  ingest_sample_knowledge.py  install_tigergraph_gsql_queries.ps1  install_tigergraph_gsql_queries.sh  install_tigergraph_source_of_truth.ps1  install_tigergraph_source_of_truth.sh  load_tigergraph_sample_data_restpp.py  materialize_features.py  preload_demo_databases.py  print_route_inventory.py  run_all.sh  run_api.sh  run_deep_hardening.py  run_final_audit.py  run_full_demo.py  run_opportunities.py  run_predictions.py  run_recommendations.py  run_runtime_validation.py  run_tigergraph_mcp_with_existing_connection.py  session16_agp_screens.mjs  session16_assistant_scope.mjs  session16_dashboard_screens.mjs  session16_dashboard_screens.py  (+55 more)
tigergraph/: README.md
(+1173 files in other folders)
