[project]
name = "iperform-insights-coaching"
version = "11.0.1"
description = "iPerform Insights & Coaching local enterprise demo platform foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyTigerGraph>=1.8.0",
    "tigergraph-mcp>=1.0.0",
    "mcp>=1.9.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langgraph>=0.2.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "networkx>=3.3",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]
# LOG_SINK=cloudwatch (direct push). Not needed for LOG_SINK=stdout on Fargate,
# where the awslogs/FireLens driver ships stdout to CloudWatch without an SDK.
aws = ["watchtower>=3.2.0", "boto3>=1.34.0"]
# Real ML/DL/GNN tier (Section 11). These are imported ONLY via guarded imports in app/ml/*
# (torch/torch_geometric/xgboost/shap) and fall back to deterministic scorers when absent — so
# they are optional, not core. Declared here so the client install is reproducible from one
# index (see uv.toml). All Python 3.12-compatible.
ml = [
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "xgboost>=2.0.0",
    "shap>=0.45.0",
]
# TigerGraph GDS extra for pyTigerGraph[gds] (GraphSAGE loaders, Featurizer). Optional — base
# pyTigerGraph connects without it; GNN falls back to the local PyG path.
gds = ["pyTigerGraph[gds]>=1.8.0"]
# smart_sdk (JPMC SmartSDK/Fusion) is CLIENT-ARTIFACTORY ONLY and not on public PyPI, so it is
# intentionally NOT declared here — install it explicitly in the client env (see CLIENT_ENV_SETUP.md).

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
